linkedin/cloud-native-go/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-go
  labels:
    app: cloud-native-go
    tier: service
spec:
  type: NodePort
  selector:
    app: cloud-native-go
  ports:
    - port: 9090
